# EdgeOn_Client

./: CMakeLists.txt  DBManager_cameras.cpp  Protocol.h  README.md  RECORDING_ANALYSIS.md  TODO.md  main.cpp  mainwindow.cpp  mainwindow.h  streamworker.cpp  videocell.cpp  videocell.h
cmake/: DeployQt.cmake.in
include/: DBManager.h  Protocol.h  mainwindow.h  onnxinference.h  recorderworker.h  streamworker.h  videocell.h  vodpanel.h  vodtimeline.h  vodvideooverlay.h  vodvideoview.h  yolov8inference.h
src/: DBManager.cpp  DBManager_cameras.cpp  main.cpp  mainwindow.cpp  onnxinference.cpp  recorderworker.cpp  streamworker.cpp  videocell.cpp  vodpanel.cpp  vodtimeline.cpp  vodvideooverlay.cpp  vodvideoview.cpp  yolov8inference.cpp
